# claude-plugins

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: create-skills
plugins/core-usage/.claude-plugin/: plugin.json
plugins/core-usage/skills/core-db/references/: api-reference.md  error-handling.md
plugins/core-usage/skills/core-db/tests/: test_scenarios.yaml
plugins/core-usage/skills/core-mq/: SKILL.md
plugins/core-usage/skills/core-mq/references/: api-reference.md  configuration.md  error-handling.md  (+1 more)
plugins/python-algorithms/.claude-plugin/: plugin.json
plugins/python-algorithms/skills/algo-fundamentals/: SKILL.md
plugins/python-algorithms/skills/algo-graphs-trees/: SKILL.md  binary_search_tree.py
plugins/python-algorithms/skills/algo-paradigms/: SKILL.md
plugins/python-fundamental/.claude-plugin/: plugin.json
plugins/python-fundamental/skills/python-asyncio/: SKILL.md
plugins/python-fundamental/skills/python-concurrency/: SKILL.md
plugins/python-fundamental/skills/python-core/: SKILL.md
skills/core-db/: SKILL.md
skills/core-db/references/: configuration.md
skills/create-skills/: SKILL.md
skills/create-skills/examples/: example-skill.md
skills/create-skills/references/: frontmatter-spec.md  integration-testing-guide.md  skill-writing-guide.md  test-writing-guide.md  validation-rules.md
skills/create-skills/scripts/: init_skill.py  test_skill.py  validate_skill.py
skills/create-skills/templates/: skill-template.md
skills/create-skills/tests/: test_scenarios.yaml
(+36 files in other folders)
