[project]
name = "claude-plugins"
version = "0.1.0"
description = "Reusable skills and agents for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "mq",
    "pyyaml",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
mq = { path = "../mq", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
